--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
   <!-- end service section -->
   <!--problem section -->
-  <section class="problem_section layout_padding">
+  <!--<section class="problem_section layout_padding">
     <div class="container">
       <div class="custom_heading-container">
         <h2>
@@ -303,11 +303,11 @@
       </div>
 
     </div>
-  </section>
+  </section>-->
   <!-- end problem section -->
+  
   <!-- why section -->
-
-  <section class="why_section layout_padding">
+  <!--<section class="why_section layout_padding">
     <div class="container">
       <div class="custom_heading-container">
         <h2>
@@ -375,9 +375,8 @@
         </div>
       </div>
     </div>
-  </section>
-
-
+  </section>-->
+  
   <!-- end why section -->
 
   <!-- client section -->
