Se agrego icono en el header de las paginas

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           <div class="col-lg-8">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
               <a class="navbar-brand" href="index.html">
+                <!-- Agregar un logo o ícono -->
+               <img src="images/icono.png" alt="Logo" style="height: 40px; margin-right: 10px;">
                <span>
                   TEADIDACT
                 </span> 
