configuré el footer,algunos detalles de botones, todavía me da error el login copiando del anterior HTML de TEADIDACT(1), modifiqué título del nav.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content=""/>
   <meta name="author" content=""/>
 
-  <title>BigWing</title>
+  <title>TEADIDACT</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"/>
@@ -54,7 +54,7 @@
                       <a class="nav-link" href="nosotros.html">Nosotros </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="service.html">Services </a>
+                      <a class="nav-link" href="service.html">Misión </a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="contacto.html">Contacto</a>
@@ -278,109 +278,6 @@
     </div>
   </section>
 
-  <!-- end service section -->
-  <!--problem section -->
-  <!--<section class="problem_section layout_padding">
-    <div class="container">
-      <div class="custom_heading-container">
-        <h2>
-          Do you have any business problem ?
-        </h2>
-      </div>
-      <div class="layout_padding2">
-        <div class="img-box">
-          <img src="images/problem.jpg" alt=""/>
-        </div>
-        <div class="detail-box">
-          <p>
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
-            some form, by injected humour, or randomised words which don&#39;t look even slightly believable. I
-          </p>
-          <div>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </section>-->
-  <!-- end problem section -->
-  
-  <!-- why section -->
-  <!--<section class="why_section layout_padding">
-    <div class="container">
-      <div class="custom_heading-container">
-        <h2>
-          Why Choose Us
-        </h2>
-      </div>
-      <div class="content-container">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis
-        </p>
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="img-box">
-              <img src="images/smiley.png" alt=""/>
-            </div>
-            <div class="detail-box">
-              <h3>
-                99%
-              </h3>
-              <h6>
-                SATISFIED CLIENTS
-              </h6>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="img-box">
-              <img src="images/monitor.png" alt=""/>
-            </div>
-            <div class="detail-box">
-              <h3>
-                4700+
-              </h3>
-              <h6>
-                AWESOME planing
-              </h6>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="img-box">
-              <img src="images/multiple-users-silhouette.png" alt=""/>
-            </div>
-            <div class="detail-box">
-              <h3>
-                4500+
-              </h3>
-              <h6>
-                CLIENTS
-              </h6>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="img-box">
-              <img src="images/bar-chart.png" alt=""/>
-            </div>
-            <div class="detail-box">
-              <h3>
-                19000+
-              </h3>
-              <h6>
-                DAILY business
-              </h6>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>-->
-  
-  <!-- end why section -->
-
   <!-- client section -->
   <section class="client_section layout_padding">
     <div class="container">
@@ -532,246 +429,45 @@
 
   <!-- end contact section -->
   <div class="footer_bg">
-    <!-- info section -->
-    <section class="info_section layout_padding2-bottom">
-      <div class="container">
-        <h3 class="">
-          BigWing
-        </h3>
+<!-- info section -->
+<section class="info_section layout_padding2-bottom">
+  <div class="container">
+    <h3>TEA DIDACT</h3>
+  </div>
+  <div class="container info_content">
+    <div class="row">
+      <div class="col-md-6">
+        <h5>Contacto</h5>
+        <p><a href="#">Ingresar acá el Contacto</a></p>
       </div>
-      <div class="container info_content">
-
-        <div>
-          <div class="row">
-            <div class="col-md-6 col-lg-4">
-              <div class="d-flex">
-                <h5>
-                  Useful Link
-                </h5>
-              </div>
-              <div class="d-flex ">
-                <ul>
-                  <li>
-                    <a href="">
-                      About Us
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About Departments
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Contact Us
-                    </a>
-                  </li>
-                </ul>
-                <ul class="ml-3 ml-md-5">
-                  <li>
-                    <a href="">
-                      Loram ipusm
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Loram ipusm
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Loram ipusm
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Loram ipusm
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Loram ipusm
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="d-flex">
-                <h5>
-                  The Services
-                </h5>
-              </div>
-              <div class="d-flex ">
-                <ul>
-                  <li>
-                    <a href="">
-                      About Us
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About Departments
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Contact Us
-                    </a>
-                  </li>
-                </ul>
-                <ul class="ml-3 ml-md-5">
-                  <li>
-                    <a href="">
-                      Lorem ipsum dolor
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      sit amet, consectetur
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      adipiscing elit,
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      sed do eiusmod
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      tempor incididunt
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="d-flex">
-                <h5>
-                  Contact Us
-                </h5>
-              </div>
-              <div class="d-flex ">
-                <ul>
-                  <li>
-                    <a href="">
-                      About Us
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About Departments
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Contact Us
-                    </a>
-                  </li>
-                </ul>
-                <ul class="ml-3 ml-md-5">
-                  <li>
-                    <a href="">
-                      Lorem ipsum
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      dolor sit amet,
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      consectetur
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      adipiscing
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      elit, sed do eiusmod
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex flex-column flex-lg-row justify-content-between align-items-center align-items-lg-baseline">
-          <div class="social-box">
-            <a href="">
-              <img src="images/fb.png" alt=""/>
-            </a>
-
-            <a href="">
-              <img src="images/twitter.png" alt=""/>
-            </a>
-            <a href="">
-              <img src="images/linkedin1.png" alt=""/>
-            </a>
-            <a href="">
-              <img src="images/instagram1.png" alt=""/>
-            </a>
-          </div>
-          <div class="form_container mt-5">
-            <form action="">
-              <label for="subscribeMail">
-                Newsletter
-              </label>
-              <input type="email" placeholder="Enter Your email" id="subscribeMail"/>
-              <button type="submit">
-                Subscribe
-              </button>
-            </form>
-          </div>
-        </div>
+      <div class="col-md-6">
+        <h5>Links Importantes</h5>
+        <p><a href="#">Ingresar acá Términos y Condiciones</a></p>
       </div>
+    </div>
+    <div class="social-box mt-4">
+      <a href="">
+        <img src="images/fb.png" alt="Facebook"/>
+      </a>
+      <a href="">
+        <img src="images/twitter.png" alt="Twitter"/>
+      </a>
+      <a href="">
+        <img src="images/linkedin1.png" alt="LinkedIn"/>
+      </a>
+      <a href="">
+        <img src="images/instagram1.png" alt="Instagram"/>
+      </a>
+    </div>
+  </div>
+</section>
+<!-- end info section -->
 
-    </section>
-
-    <!-- end info_section -->
 
     <!-- footer section -->
     <section class="container-fluid footer_section">
       <p>
-        © 2024 All Rights Reserved By TEADIDACT
+        © 2024 Todos los derechos reservados a TEADIDACT
       </p>
     </section>
     <!-- footer section -->
