--- a/contacto.html
+++ b/contacto.html
@@ -51,16 +51,16 @@
                       <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="service.html">Nosotros </a>
+                      <a class="nav-link" href="nosotros.html">Nosotros </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="service.html">Misión </a>
+                      <a class="nav-link" href="mision.html">Misión </a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="login.html"> Login</a>
+                      <a class="nav-link" href="login.html"> Ingresar</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
