--- a/mision.html
+++ b/mision.html
@@ -9,7 +9,7 @@
   <meta name="description" content=""/>
   <meta name="author" content=""/>
 
-  <title>BigWing</title>
+  <title>TEADIDACT</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"/>
@@ -35,7 +35,7 @@
             <nav class="navbar navbar-expand-lg custom_nav-container ">
               <a class="navbar-brand" href="index.html">
                 <!-- Agregar un logo o ícono -->
-               <img src="images/icono.png" alt="Logo" style="height: 40px; margin-right: 10px;">
+              <img src="images/icono.png" alt="Logo" style="height: 40px; margin-right: 10px;">
                 <span>
                   TEADIDACT
                 </span>
@@ -54,7 +54,7 @@
                       <a class="nav-link" href="nosotros.html">Nosotros </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="mision.html">Misión </a>
+                      <a class="nav-link" href="mision.html">Misión</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="contacto.html">Contacto</a>
@@ -81,64 +81,75 @@
   <section class="service_section">
     <div class="container">
       <div class="custom_heading-container">
-        <h2>
-          Our Services
-        </h2>
+        <!-- Margen inferior grande para separar el título del texto -->
+        <h2 class="mb-5">Queremos ayudarte</h2>
       </div>
-      <div class="service_container layout_padding2">
-        <div class="service_box">
-          <div class="img-box">
-            <img src="images/s-1.jpg" alt=""/>
-          </div>
-          <div class="detail-box">
-            <h4>
-              Business <br/>
-              Consultant
-            </h4>
-            <p>
-              have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look even
-              slightly believable. If you are
-            </p>
-          </div>
-        </div>
-        <div class="service_box">
-          <div class="img-box">
-            <img src="images/s-2.jpg" alt=""/>
-          </div>
-          <div class="detail-box">
-            <h4>
-              Marketing <br/>
-              Analytics
-            </h4>
-            <p>
-              have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look even
-              slightly believable. If you are
-            </p>
-          </div>
-        </div>
-        <div class="service_box">
-          <div class="img-box">
-            <img src="images/s-3.jpg" alt=""/>
-          </div>
-          <div class="detail-box">
-            <h4>
-              Financial <br/>
-              Planning
-            </h4>
-            <p>
-              have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look even
-              slightly believable. If you are
-            </p>
-          </div>
-        </div>
-      </div>
+      
       <div>
-        <a href="">
-          Read More
-        </a>
+        <!-- Márgenes superior e inferior grandes para separar el texto de otros elementos -->
+        <p class="mt-4 mb-5">
+          Esta plataforma tiene como finalidad proporcionar un entorno digital, interactivo y terapéutico, que facilite la evolución y el desarrollo de habilidades claves en el ámbito neurocognitivo de los niños con TEA. El proyecto se enfoca en la creación de un recurso inclusivo, accesible y adaptable, destinado a apoyar a terapeutas, padres, tutores y cuidadores en la implementación de intervenciones tempranas, con el objetivo de mejorar la calidad de vida y el potencial de desarrollo de estos niños en sus etapas formativas.
+        </p>
+      </div>
+      
+      <div class="row">
+        <!-- Cada col ocupará 3 columnas en pantallas medianas (md) o más grandes -->
+        <div class="col-md-3 col-sm-6">
+          <div class="service_box text-center">
+            <div class="img-box">
+              <img src="images/edadesyetapas.png" alt="Business Consultant" class="img-fluid"/>
+            </div>
+            <div class="detail-box">
+              <h4>Edades y <br> Etapas</h4>
+              <p>Brief description about business consultant services.</p>
+              <a href="#" class="btn btn-primary rounded-pill mt-3">Leer más</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-md-3 col-sm-6">
+          <div class="service_box text-center">
+            <div class="img-box">
+              <img src="images/vida.saludable.png" alt="Marketing Analytics" class="img-fluid"/>
+            </div>
+            <div class="detail-box">
+              <h4>Vida <br> Saludable</h4>
+              <p>Brief description about marketing analytics services.</p>
+              <a href="#" class="btn btn-primary rounded-pill mt-3">Leer más</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-md-3 col-sm-6">
+          <div class="service_box text-center">
+            <div class="img-box">
+              <img src="images/seguridadyprevencion.png" alt="Financial Planning" class="img-fluid"/>
+            </div>
+            <div class="detail-box">
+              <h4>Seguridad y <br> Prevención</h4>
+              <p>Brief description about financial planning services.</p>
+              <a href="#" class="btn btn-primary rounded-pill mt-3">Leer más</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-md-3 col-sm-6">
+          <div class="service_box text-center">
+            <div class="img-box">
+              <img src="images/habilidades,sociales.png" alt="Other Service" class="img-fluid"/>
+            </div>
+            <div class="detail-box">
+              <h4>Habilidades <br> sociales</h4>
+              <p>Brief description about other services.</p>
+            <!-- Botón debajo del contenido -->
+            <a href="#" class="btn btn-primary rounded-pill mt-3">Leer más</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
+  
 
   <!-- end service section -->
 
