ultima modificacion del index

--- a/login.html
+++ b/login.html
@@ -27,8 +27,10 @@
         <div class="container">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
+                <!-- Agregar un logo o ícono -->
+                <img src="images/icono.png" alt="Logo" style="height: 40px; margin-right: 10px;">
               <span>
-                TEADIDACT <img src="images/hero.png" alt="TEADidact" class="">
+                TEADIDACT 
               </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
