corrección de textos en el home y botones, agregué imagen de biclouds en nosotros

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
-                        Read More
+                        Ver más
                       </a>
                     </div>
                   </div>
@@ -128,7 +128,7 @@
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
-                        Read More
+                        Ver más
                       </a>
                     </div>
                   </div>
@@ -152,12 +152,11 @@
                       construyendo puentes
                     </h1>
                     <p>
-                      Buscamos superar desafíos mediante la mejora de la comunicación y el entendimiento. Lo mas importante es contentar 
-                      con las personsa y que los recursos sean un entorno inclusivo.
+                      Nuestro objetivo es superar desafíos mejorando la comunicación y el entendimiento. Lo más importante es conectar con las personas y crear recursos que promuevan un entorno inclusivo.
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
-                        Read More
+                        Ver más
                       </a>
                     </div>
                   </div>
@@ -206,7 +205,7 @@
           </p>
           <div>
             <a href="">
-              Read More
+              Ver más
             </a>
           </div>
         </div>
@@ -272,7 +271,7 @@
       </div>
       <div>
         <a href="">
-          Read More
+          Ver más
         </a>
       </div>
     </div>
