--- a/nosotros.html
+++ b/nosotros.html
@@ -92,10 +92,10 @@
           <p>
             "Somos un equipo de estudiantes de la carrera de Analista de Sistemas en el Instituto Superior Nuestra Señora de La Paz. Con el proyecto TEADIDACT, nuestro objetivo es apoyar a muchas personas a través de este sitio web, promoviendo la comprensión y el respeto hacia el autismo. Queremos hacer una diferencia significativa, tanto en la vida de quienes lo necesitan como en la percepción general sobre este tema importante."
           </p>
-          <div>
-            <a href="">
-              Read More
-            </a>
+        </div>
+        <div class="row mt-5">
+          <div class="col-12 text-center">
+            <img src="images/el-equipo.jpeg" alt="Equipo TEADIDACT" class="img-fluid" style="max-width: 75%; height: auto;"/>
           </div>
         </div>
       </div>
