modificaciones en textos generales

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <div class="container">
       <div class="custom_heading-container">
         <h2>
-          Nuestra Misión
+          Unidos por un futuro mejor
         </h2>
         
       </div>
@@ -279,7 +279,7 @@
   <section class="client_section layout_padding">
     <div class="container">
       <h2>
-        What Our Clients Says
+        Algunos comentarios..
       </h2>
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -287,11 +287,7 @@
             <div class="client_container layout_padding2">
               <div class="client_text">
                 <p>
-                  psum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna
-                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                  commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                  "TEADIDACT ha sido una herramienta increíble para nuestro hijo. Desde que comenzamos a utilizarla, hemos notado un gran avance en sus habilidades de comunicación y en su confianza. Como padres, estamos profundamente agradecidos por el enfoque inclusivo y la accesibilidad del sitio. Nos ha ayudado a entender mejor sus necesidades y a apoyarlo de manera más efectiva en su desarrollo."
                 </p>
               </div>
               <div class="detail-box">
@@ -313,11 +309,7 @@
             <div class="client_container layout_padding2">
               <div class="client_text">
                 <p>
-                  psum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna
-                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                  commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                  "Esta plataforma ha cambiado nuestra manera de trabajar con nuestro hijo. Las actividades son prácticas y fáciles de seguir, lo que nos permitió integrar el aprendizaje en nuestro día a día. TEADIDACT no solo ha sido útil para él, sino que también nos ha dado a nosotros, como padres, la tranquilidad de estar contribuyendo positivamente a su crecimiento."
                 </p>
               </div>
               <div class="detail-box">
@@ -339,11 +331,7 @@
             <div class="client_container layout_padding2">
               <div class="client_text">
                 <p>
-                  psum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna
-                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                  commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                  "TEADIDACT ha sido un recurso vital para nuestra familia. Nos ha proporcionado una estructura que facilita las sesiones de terapia y las actividades diarias. La interfaz amigable y el contenido especializado nos han permitido crear un ambiente de aprendizaje que nuestro hijo disfruta. Definitivamente recomendaría esta plataforma a cualquier familia que busque apoyo para niños con TEA."
                 </p>
               </div>
               <div class="detail-box">
