Modificación en index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"/>
+<!DOCTYPE html>
+<html>
+  
+<head><meta charset="utf-8"/>
 
   
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -477,4 +480,6 @@
 
 
 
-</body></html>
+</body>
+
+</html>
